--- a/app/globals.css
+++ b/app/globals.css
@@ -8,4 +8,8 @@
 
 body {
   @apply bg-black text-gray-100;
+  background-image: url('/calc_background.png');
+  background-repeat: repeat;
+  background-size: auto;
+  background-attachment: fixed;
 }
